--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -11,9 +11,9 @@ Vagrant.configure(2) do |config|
 
 
   if provisioned
-    config.vm.synced_folder '../web/', '/var/www', create: true, owner: 'nginx',  group: 'nginx', mount_options: ['dmode=775', 'fmode=775']
+    config.vm.synced_folder '../', '/var/www', create: true, owner: 'nginx',  group: 'nginx', mount_options: ['dmode=775', 'fmode=775']
   else
-    config.vm.synced_folder '../web/', '/var/www', create: true
+    config.vm.synced_folder '../', '/var/www', create: true
   end
 
   config.vm.network :private_network, ip: '192.168.33.16'
