added image upload

--- a/vagrant/conf/nginx.conf
+++ b/vagrant/conf/nginx.conf
@@ -28,6 +28,14 @@ http {
         listen       80 default_server;
         listen       [::]:80 default_server;
         server_name  _;
+
+        sendfile            off;
+
+        location /cdn {
+            alias /cdn;
+            try_files $uri =404;
+        }
+
         location / {
             proxy_pass http://localhost:8080;
         }
