--- a/vagrant/conf/voicely.conf
+++ b/vagrant/conf/voicely.conf
@@ -3,3 +3,4 @@ directory=/usr/local/bin
 command=/usr/local/bin/voicely
 stderr_logfile=/var/log/voicely.log
 stdout_logfile=/var/log/voicely.log
+user=nginx
