--- a/vagrant/conf/nginx.conf
+++ b/vagrant/conf/nginx.conf
@@ -39,5 +39,13 @@ http {
         location / {
             proxy_pass http://localhost:8080;
         }
+
+        location ~ /v1/rooms/[0-9]+/join {
+            proxy_pass http://localhost:8080;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+        }
     }
 }
