--- a/vagrant/conf/rooms.conf
+++ b/vagrant/conf/rooms.conf
@@ -3,3 +3,4 @@ directory=/usr/local/bin
 command=/usr/local/bin/rooms
 stderr_logfile=/var/log/rooms.log
 stdout_logfile=/var/log/rooms.log
+autorestart=true
