--- a/vagrant/conf/soapbox.conf
+++ b/vagrant/conf/soapbox.conf
@@ -4,3 +4,4 @@ command=/usr/local/bin/soapbox
 stderr_logfile=/var/log/soapbox.log
 stdout_logfile=/var/log/soapbox.log
 user=nginx
+autorestart=true
