--- a/vagrant/conf/indexer.conf
+++ b/vagrant/conf/indexer.conf
@@ -3,3 +3,4 @@ directory=/usr/local/bin
 command=/usr/local/bin/indexer
 stderr_logfile=/var/log/indexer.log
 stdout_logfile=/var/log/indexer.log
+autorestart=true
