--- a/vagrant/conf/notifications.conf
+++ b/vagrant/conf/notifications.conf
@@ -3,3 +3,4 @@ directory=/usr/local/bin
 command=/usr/local/bin/notifications
 stderr_logfile=/var/log/notifications.log
 stdout_logfile=/var/log/notifications.log
+autorestart=true
