--- a/vagrant/conf/nginx.conf
+++ b/vagrant/conf/nginx.conf
@@ -40,4 +40,21 @@ http {
             proxy_pass http://localhost:8080;
         }
     }
+
+    server {
+        listen       8081 default_server;
+        listen       [::]:8081 default_server;
+        server_name  _;
+
+        sendfile            off;
+
+        location /cdn {
+            alias /cdn;
+            try_files $uri =404;
+        }
+
+        location / {
+            proxy_pass http://localhost:8081;
+        }
+    }
 }
