--- a/vagrant/conf/nginx.conf
+++ b/vagrant/conf/nginx.conf
@@ -57,4 +57,21 @@ http {
             proxy_pass http://localhost:8081;
         }
     }
+
+    server {
+        listen       8082 default_server;
+        listen       [::]:8082 default_server;
+        server_name  _;
+
+        sendfile            off;
+
+        location /cdn {
+            alias /cdn;
+            try_files $uri =404;
+        }
+
+        location / {
+            proxy_pass http://localhost:8082;
+        }
+    }
 }
