--- a/vagrant/conf/supervisord/rooms.conf
+++ b/vagrant/conf/supervisord/rooms.conf
@@ -1,6 +1,6 @@
 [program:rooms]
 directory=/usr/local/bin
-command=/usr/local/bin/rooms
+command=/usr/local/bin/rooms -c /conf/services/rooms.conf
 stderr_logfile=/var/log/rooms.log
 stdout_logfile=/var/log/rooms.log
 autorestart=true
