--- a/vagrant/conf/supervisord/soapbox.conf
+++ b/vagrant/conf/supervisord/soapbox.conf
@@ -1,6 +1,6 @@
 [program:soapbox]
 directory=/usr/local/bin
-command=/usr/local/bin/soapbox
+command=/usr/local/bin/soapbox -c /conf/services/soapbox.conf
 stderr_logfile=/var/log/soapbox.log
 stdout_logfile=/var/log/soapbox.log
 user=nginx
