--- a/vagrant/conf/supervisord/indexer.conf
+++ b/vagrant/conf/supervisord/indexer.conf
@@ -1,6 +1,6 @@
 [program:indexer]
 directory=/usr/local/bin
-command=/usr/local/bin/indexer
+command=/usr/local/bin/indexer -c /conf/services/indexer.conf
 stderr_logfile=/var/log/indexer.log
 stdout_logfile=/var/log/indexer.log
 autorestart=true
