--- a/vagrant/conf/supervisord/notifications.conf
+++ b/vagrant/conf/supervisord/notifications.conf
@@ -1,6 +1,6 @@
 [program:notifications]
 directory=/usr/local/bin
-command=/usr/local/bin/notifications
+command=/usr/local/bin/notifications -c /conf/services/notifications.conf
 stderr_logfile=/var/log/notifications.log
 stdout_logfile=/var/log/notifications.log
 autorestart=true
