--- a/vagrant/conf/supervisord/tracking.conf
+++ b/vagrant/conf/supervisord/tracking.conf
@@ -1,6 +1,6 @@
 [program:tracking]
 directory=/usr/local/bin
-command=/usr/local/bin/tracking
+command=/usr/local/bin/tracking -c /conf/services/tracking.conf
 stderr_logfile=/var/log/tracking.log
 stdout_logfile=/var/log/tracking.log
 autorestart=true
