--- a/vagrant/conf/supervisord/welcome.conf
+++ b/vagrant/conf/supervisord/welcome.conf
@@ -1,6 +1,6 @@
 [program:welcome]
 directory=/usr/local/bin
-command=/usr/local/bin/welcome -c /conf/services/welcome.conf
+command=/usr/local/bin/welcome -c /conf/services/welcome.toml
 stderr_logfile=/var/log/welcome.log
 stdout_logfile=/var/log/welcome.log
 autorestart=true
