--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -8,7 +8,7 @@ Vagrant.configure(2) do |config|
   config.vm.box = 'bento/centos-7.7'
   config.vm.box_check_update = false
   config.vm.hostname = 'jukebox'
-
+#   config.vbguest.auto_update = false
 
   if provisioned
     config.vm.synced_folder '../', '/var/www', create: true, owner: 'nginx',  group: 'nginx', mount_options: ['dmode=775', 'fmode=775']
