enhancement/room-metrics (#239)
* added

* fix

* full

* update

* update

* fix

* fix

* fix

* fix

* updates

* fix

* updates

* whoops

* comment

* fix

* fix

* fix

* whoops

* fix

* fixes

* fixes

* updates

* fmt

* revert

* ignore

* store

* update

* added

* start

* whoops

* test

--- a/conf/services/tracking.toml
+++ b/conf/services/tracking.toml
@@ -1,3 +1,7 @@
+[trackers]
+roomtimelog = true
+mixpanel = false
+
 [redis]
 host = "localhost"
 port = 6379
@@ -6,3 +10,11 @@ database = 0
 [mixpanel]
 token = "d124ce8f1516eb7baa7980f4de68ded5"
 url = "https://api-eu.mixpanel.com"
+
+[db]
+host = "127.0.0.1"
+port = 5432
+user = "voicely"
+password = "voicely"
+database = "voicely"
+ssl = "disable"
