--- a/conf/services/notifications.toml
+++ b/conf/services/notifications.toml
@@ -17,6 +17,10 @@ key = "9U8K3MKG2K"
 team = "Z9LC5GZ33U"
 bundle = "app.social.soapbox"
 
-[grpc]
+[rooms]
 host = "127.0.0.1"
 port = "50052"
+
+[grpc]
+host = "127.0.0.1"
+port = "50053"
